--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -36,7 +36,7 @@ jobs:
           cd /opt/rt-n56u/toolchain-mipsel
           sh dl_toolchain.sh
           mkdir -p /opt/images/
-      - name: Build Firmware
+      - name: Build Firmware By Default
         env:
           TNAME: K2P
         run: |
@@ -69,7 +69,7 @@ jobs:
           ##广告管理##
           echo "CONFIG_FIRMWARE_INCLUDE_ADBYBY=y" >> .config #adbyby plus+
           ##DNS服务##
-          echo "CONFIG_FIRMWARE_INCLUDE_SMARTDNS=n" >> .config #smartdns
+          echo "CONFIG_FIRMWARE_INCLUDE_SMARTDNS=y" >> .config #smartdns
           echo "CONFIG_FIRMWARE_INCLUDE_ADGUARDHOME=n" >> .config #adg DNS去AD
 
 
